--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -173,7 +173,7 @@
   width: 20vw;
   margin-right: 30vw;
   display: none;
-  background-color: blue;
+  background-color: #ADD8E6;
   border-radius: 5%;
   color: white;
   text-align: center;
